microservice/kube/user-resource-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-resource-service
  name: user-resource-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-resource-service
      version: v1
  #strategy: {}
  template:
    metadata:
      labels:
        app: user-resource-service
        version: v1
    spec:
      serviceAccountName: k8s-101-role
      containers:
      - image: localhost:5000/algotrade/user-resource-service
        name: user-resource-service
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 90
        # resources: 
        #   requests:
        #     cpu: 300m
        #     memory: 256Mi
        #   limits:
        #     cpu: 500m
        #     memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-resource-service
  name: user-resource-service-srv
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: user-resource-service
