microservice/kube/user-resource-service/c9-jupyter-vhost.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: user-resource
  labels: 
    istio-injection: enabled
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: user-gateway
  namespace: user-resource
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.grafana.srv.algotrade.dev"
    - "*.jupyter.srv.algotrade.dev"
    - "*.c9.srv.algotrade.dev"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - "*.grafana.srv.algotrade.dev"
    - "*.jupyter.srv.algotrade.dev"
    - "*.c9.srv.algotrade.dev"
    tls:
      mode: SIMPLE
      credentialName: user-gateway-cert-secret
